edits done.  Need to transfer to overleaf now...

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -178,7 +178,7 @@ row.names(who_rec_conmat)<-c("Not Exceed","Exceed","Column Totals")
 
 
 total_accuracy<-NULL
-total_accuracy$epa_child<-https://github.com/USEPA/Microcystinchla/blob/master/R/get_nla.R((child_conmat[1,1]+child_conmat[2,2])/
+total_accuracy$epa_child<-round((child_conmat[1,1]+child_conmat[2,2])/
   sum(child_conmat),2)
 total_accuracy$who_drink<-round((who_drink_conmat[1,1]+who_drink_conmat[2,2])/
   sum(who_drink_conmat),2)
@@ -216,9 +216,9 @@ Over the last decade, numerous events and legislative activities have raised the
 
 One of these complications is that they rely on available measurements of microcystin.  While laboratory testing (e.g., chromatography) remains the gold standard for quantifying microcystin concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are not yet widely used and are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).  
 
-Fortunately, cyanobacteria and microcystin-LR has been shown to be associated with several other, more commonly measured and well understood components of water quality that are readily assessed in the field [e.g. @yuan2015deriving].  For instance, there are small or hand held fluorometers that measure chlorohpyll *a*.  Additionally, chlorophyll *a* is a very commonly measured component of water quality that is also known to be positively associated with microsystin-LR concentrations [@pip2014microcystin; @yuan2014managing].  Yuan et. al [-@yuan2014managing] explore these associations in detail and control for other related variables.  In their analysis they find that total nitrogen and chlorophyll *a* show the strongest association with microcystin. Furthermore, they identify chlorophyll*a* and total nitrogen concentrations that are associated with exceeding 1 $\mu$g/L of microcystin.   Given these facts, it should be possible to identify chlorophyll *a* concentrations that would be associated with the new USEPA microcystin health advisory levels for drinking water.  Identifying these associations would provide another tool for water resource managers to help manage the threat to public health posed by cHABs and would be especially useful in the absence of measured microcystin concentrations.  
+Fortunately, cyanobacteria and microcystin-LR has been shown to be associated with several other, more commonly measured and well understood components of water quality that are readily assessed in the field [e.g. @yuan2015deriving].  For instance, there are small or hand held fluorometers that measure chlorohpyll *a*.  Additionally, chlorophyll *a* is a very commonly measured component of water quality that is also known to be positively associated with microsystin-LR concentrations [@pip2014microcystin; @yuan2014managing].  Recently, Yuan et. al [-@yuan2014managing] explored these associations in detail and controlled for other related variables.  In their analysis they find that total nitrogen and chlorophyll *a* show the strongest association with microcystin. Furthermore, they identify chlorophyll*a* and total nitrogen concentrations that are associated with exceeding 1 $\mu$g/L of microcystin.   These findings suggest that chlorophyll a concentrations could also track the new USEPA microcystin health advisory levels for drinking water.  Identifying this association would provide an important tool for water resource managers to help manage the threat to public health posed by cHABs and would be especially useful in the absence of measured microcystin concentrations.  
 
-In this paper we build on past efforts and utilize the National Lakes Assessment (NLA) data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin health advisory concentrations [@usepa2009national; @usepa2015drinking; @chorus1999toxic].  We add to past studies by exploring associations with newly announced advisory levels and by also applying a different method, conditional probability analysis.  Utilizing different methods strengthens the evidence for suggested chlorophyll *a* levels that are associated with increased risk of exceeding the health advisory levels as those levels are not predicated on a single analytical method.  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).
+In this paper we build on past efforts and utilize the National Lakes Assessment (NLA) data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin health advisory concentrations [@usepa2009national; @usepa2015drinking; @chorus1999toxic].  We build on past studies by exploring associations with the newly announced advisory levels and by also applying a different method, conditional probability analysis.  Utilizing different methods strengthens the evidence for suggested chlorophyll *a* levels that are associated with increased risk of exceeding the health advisory levels as those levels are not predicated on a single analytical method.  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
 
@@ -230,14 +230,14 @@ For our analysis we only used samples that were part of the probability sampling
 ##Analytical Methods
 We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin health advisory levels [@paul2011probability].  Many health advisory levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)`% of lakes sampled had a concentration greater than 10 $\mu$g/L.  Thus, for this analysis we focused on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's (i.e. bottle fed infants to pre-school age children) drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult (i.e. beyond pre-school aged individuals) drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational).
 
-Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisories changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin health advisory levels.  We also calculated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identfiy the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  Using the upper confidence limit to identify a threshold is justified as it ensures that a given threshold is unlikely to miss a microcystin exceedance.
+Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisories changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin health advisory levels.  We also calculated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identified the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  Using the upper confidence limit to identify a threshold is justified as it ensures that a given threshold is unlikely to miss a microcystin exceedance.
 
-As both microcystin-LR and chlorophyll *a* values were highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.  A more detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for greater detail.  Lastly, all analyses were conducted using R version 3.2.2 and code and data from this analysis are freely available as an R package at [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).  
+As both microcystin-LR and chlorophyll *a* values were highly right skewed, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.  A more detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for greater detail.  Lastly, all analyses were conducted using R version 3.2.2 and code and data from this analysis are freely available as an R package at [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).  
 
-Lastly, we assess the ability of these chlorophyll *a* thresholds to predict microcystin exceedance.  We use error matrices and calculate total accuracy as well as the proportion of false negatives.  Total accuracy is the total number of correct predictions divided by total observations.  The proportion of false negatives is the total number of lakes that were predicted to not exceed the microcystin guidelines but actually did, divided by the total number of observations. 
+Lastly, we assessed the ability of these chlorophyll *a* thresholds to predict microcystin exceedance. We used error matrices and calculate total accuracy as well as the proportion of false negatives.  Total accuracy is the total number of correct predictions divided by total observations.  The proportion of false negatives is the total number of lakes that were predicted to not exceed the microcystin guidelines but actually did, divided by the total number of observations. 
 
 #Results
-In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L. Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level. For chlorophyll *a*, the range was `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L.  All lakes had detectable levels of chlorophyll *a*.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The associations between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
+In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L. Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level.  Chlorophyll *a*, ranged from `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L and this captures the range of trrophic states from oligotrophic to hypereutrophic.  All lakes had detectable levels of chlorophyll *a*.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The association between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
 
 The chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's drinking water advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult drinking water advisory, and `r total_accuracy$who_rec*100`% for the WHO regreational advisory (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table}, \ref{tab:adult_conmat_table}, & \ref{tab:who_rec_conmat_table}).  However, total accuracy is only one part of the prediction performace with which we are concerned.  
 
@@ -246,14 +246,14 @@ When using the chlorophyll *a* cutoffs as an indicator of microcystin exceedance
 #Discussion
 The log-log association between microcystin-LR and chlorophyll *a* indicates that, in general, higher concentrations of microcystin-LR almost always co-occur with higher concentrations of chlorophyll *a* yet the inverse is not true (Figure \ref{fig:chla_micro_scatter}).  Higher chlorophyll *a* is not necessarily predictive of higher microcystin-LR concentrations; however, chlorophyll *a* may be predictive of the probability of exceeding a certain threshold. 
 
-This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We used this association to identify chlorophyll *a* concentrations that are associated with a range of probabilities of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  For the purposes of this discussion we focus on a conditional probability of 50% or greater (i.e., greater than even odds to exceed a health advisory level). The 50% conditional probability chlorophyll *a* thresholds represents `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,2]])/length(nla_dat$CHLA)),1)`%,
+Indeed, the probability of exceeding each of the four tested health advisory levels increased as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We used this association to identify chlorophyll *a* concentrations that were associated with a range of probabilities of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  For the purposes of this discussion we focus on a conditional probability of 50% or greater (i.e., greater than even odds to exceed a health advisory level). The 50% conditional probability chlorophyll *a* thresholds represents `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,2]])/length(nla_dat$CHLA)),1)`%,
 `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the USEPA Child, the WHO Drinking, the USEPA Adult, and the WHO recreational levels, respecitvely.  
 
 There are numerous possible uses for the chlorophyll *a* and microcystin advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll *a* and in the event of exceeding a target concentration take water samples and have those samples tested for microcystin-LR.  
 
 A second potential use is to identify past bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanisms responsible for adverse impacts (e.g., toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs, one approach has been to utilize phycocyanin to screen for or identify bloom events [@miller2013spatiotemporal, ahn2007alternative, @marion2012vivo].  This is a useful approach, but phycocyanin is not always available, thus limiting its utility especially for examining historical data. Using our chlorophyll *a* cutoffs provides a value that is also associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
-The values we propose are national and may miss regional variation in water quality, including, chlorophyll *a* and microcystin-LR [@beaver2014land, @wagner2011landscape]. A set of regional conditional probabilities would be interesting; however, limiting the analysis to the data available per region would make interpretaion difficult.  The sample size for each of the conditional probabilities would be reduced (it ranges from `r  min(table(nla_dat$WSA_EChttps://github.com/USEPA/Microcystinchla/blob/master/R/get_nla.RO9))` to `r  max(table(nla_dat$WSA_ECO9))`) and the number of lakes in each region that exceed the microcystin values is also reduced.  The result is that our confidence in the conditional probabilites would be less (i.e. greatly increased confidence intervals) and the relationships less pronounced as we have fewer lakes on which to base the probabilites.  Thus, this dataset is best for making national scale recommendations. 
+The values we propose are national and may miss regional variation in water quality, including, chlorophyll *a* and microcystin-LR [@beaver2014land, @wagner2011landscape]. A set of regional conditional probabilities would be interesting; however, limiting the analysis to the data available per region would make interpretaion difficult.  The sample size for each of the conditional probabilities would be reduced (it ranges from `r  min(table(nla_dat$WSA_ECO9))` to `r  max(table(nla_dat$WSA_ECO9))`) and the number of lakes in each region that exceed the microcystin values is also reduced.  The result is that our confidence in the conditional probabilites would be less (i.e. greatly increased confidence intervals) and the relationships less pronounced as we have fewer lakes on which to base the probabilites.  Thus, this dataset is best for making national scale recommendations. 
 
 Two other limitations with the 2007 National Lakes Assessment data are that they represent a single sample from that lake and do not capture temporal dynamics and without subsetting the data do not provide us the ability to validate the presence of microcystin-LR.  As of this writing, the 2012 National Lakes Assessment data are not public.  When these data are released, a validation of this approach can be completed then.
 
